Closed
Bug 735016
Opened 14 years ago
Closed 14 years ago
JS OOM Testing: Assertion failure: !hasLazyType(), at ../vm/ObjectImpl.h:198
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla14
People
(Reporter: decoder, Unassigned)
Details
(Keywords: assertion, testcase)
Attachments
(2 files)
|
13.83 KB,
text/plain
|
Details | |
|
918 bytes,
patch
|
luke
:
review+
|
Details | Diff | Splinter Review |
The following command aborts on mozilla-central revision c6f26a8dcd08:
js -m -n -a -A 6113 -f js/src/jit-test/tests/jaeger/recompile/bug641269.js
Attached is the log with backtraces of all failed allocations (as outputted when compiling with --enable-oom-backtrace and filtered through addr2line).
Comment 1•14 years ago
|
||
Avoid botching assert when getType fails to replace an object's lazy type (TI will be disabled afterwards so bogus assert).
Attachment #613619 -
Flags: review?(luke)
Updated•14 years ago
|
Attachment #613619 -
Flags: review?(luke) → review+
Comment 2•14 years ago
|
||
Comment 3•14 years ago
|
||
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla14
You need to log in
before you can comment on or make changes to this bug.
Description
•