Don't botch assert after OOM while constructing object's lazy type, bug 735016. r=luke